--- a/test1.ipynb
+++ b/test1.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b7a11fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e5b1e8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b1e8e5",
+   "id": "27a74111",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -26,7 +37,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
