test after adding gitattributes

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b2e510c2",
+   "metadata": {},
+   "source": [
+    "# Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8b7a11fb",
    "metadata": {},
    "outputs": [],
@@ -15,6 +23,32 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27a74111",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33838fd2",
+   "metadata": {},
+   "source": [
+    "# test markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2323fcf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97edde2f",
    "metadata": {},
    "outputs": [],
    "source": []
